--- a/public/css/starter-template.css
+++ b/public/css/starter-template.css
@@ -10,6 +10,11 @@ body {
     /*font-family: 'Open Sans', sans-serif;*/
       font-size: 14px;
 }
+.espacio {
+  padding: 30px 0px;
+
+ 
+}
 .navegacion {
     background: #083568;
     color: #f5f5f1    ;
