--- a/public/css/starter-template.css
+++ b/public/css/starter-template.css
@@ -29,6 +29,11 @@ body {
 	background: #083568;
 	color: #f5f5f1    ;
 	padding: 250px 0;
+    
+}
+.margeniz{
+    margin-left: 20%;
+
 }
 #izquierda
 {
